--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -66,76 +66,73 @@ jobs:
     needs: check-version
     if: ${{ needs.check-version.outputs.result == '200' }}
     steps:
-      - name: Deploy
-        uses: appleboy/ssh-action@master
+      - name: Install SSH Key
+        uses: shimataro/ssh-key-action@v2
         with:
-          host: ${{ secrets.SSH_HOST }}
-          username: ${{ secrets.SSH_USERNAME }}
-          key: ${{ secrets.SSH_KEY }}
-          port: ${{ secrets.SSH_PORT }}
-          debug: true
-          command_timeout: 30m
-          script: |
-            docker pull ${{ env.MIRROR_REPOSITORY_TAG }} \
-              && docker ps -aq --filter "name=${{ env.CONTAINER_NAME }}" | xargs docker rm -f || echo "Delete fail" \
-              && docker run \
+          key: ${{ secrets.SSH_KEY }} 
+          known_hosts: unnecessary
+      - name: Deploy
+        id: deploy
+        timeout-minutes: 30
+        run: |
+          # 生成文件部署文件
+          echo '#!/bin/bash
+          docker pull ${{ env.MIRROR_REPOSITORY_TAG }} > /dev/null 2>&1 \
+            && (docker ps -aq --filter "name=${{ env.CONTAINER_NAME }}" | xargs docker rm -f || echo "Delete fail") > /dev/null 2>&1 \
+            && docker run \
                 -p 8080 \
                 --rm \
                 -d \
                 --name "${{ env.CONTAINER_NAME }}" \
-                ${{ env.MIRROR_REPOSITORY_TAG }}
-  dyups:
-    runs-on: ubuntu-latest
-    needs: deploy
-    if: ${{ needs.deploy.result == 'success' }}
-    steps:
-      - name: Regist dyups
-        uses: appleboy/ssh-action@master
-        with:
-          host: ${{ secrets.SSH_HOST }}
-          username: ${{ secrets.SSH_USERNAME }}
-          key: ${{ secrets.SSH_KEY }}
-          port: ${{ secrets.SSH_PORT }}
-          debug: true
-          command_timeout: 30m
-          script: |
-            port=`docker ps --filter "name=${{ env.CONTAINER_NAME }}" --format "{{.Ports}}" -a | awk -F ":" '{print $2}' | awk -F "->" '{print $1}'`
-            if [ "$port" == "" ]; then
-              echo "未找到容器暴露端口"
-              exit 1
+                ${{ env.MIRROR_REPOSITORY_TAG }} > /dev/null 2>&1 \
+            && ip=$(curl -s --max-time 5 ifconfig.me) \
+            && port=$(docker ps --filter "name=${{ env.CONTAINER_NAME }}" --format "{{.Ports}}" -a | awk -F ":" "{print \$2}" | awk -F "->" "{print \$1}") \
+            && if [ "$ip" == "" ]; then exit 1; fi \
+            && if [ "$port" == "" ]; then exit 2; fi \
+            && httpcode=`curl -sL -w '%{http_code}' --connect-timeout 3 "127.0.0.1:$port/?r=$RANDOM" -o /dev/null` \
+            && if [ "$httpcode" != "200" ]; then exit 3; fi \
+            && echo "{\"address\":\"$ip\",\"port\":$port}"
+          ' > agent.sh
+          host=${{ secrets.SSH_HOST }}
+          hosts=(${host//,/ })
+          result=""
+          for key in "${hosts[@]}"; do
+            res=$(ssh -p ${{ secrets.SSH_PORT }} -o StrictHostKeyChecking=no "${{ secrets.SSH_USERNAME }}@$key" 'bash -s' < agent.sh)
+            code=$?
+            if [ "$code" != "0" ]; then
+              echo "$key 部署失败，状态码：$code ，信息：$res"
+            else
+              if [ "$result" == "" ]; then
+                result="$res"
+              else
+                result="$result,$res"
+              fi
             fi
-
-            # 检查容器运行状态
-            httpcode=`curl -sL -w '%{http_code}' --connect-timeout 3 "127.0.0.1:$port/?r=$RANDOM" -o /dev/null`
-            if [ "$httpcode" != "200" ]; then
-              echo "容器运行错误"
-              exit 1
-            fi
-
-            # 注册 dyups
+          done
+          if [ "$result" == "" ]; then
+            echo "没有部署成功"
+            exit 1
+          fi
+          result="[$result]"
+          echo "::set-output name=result::$result"
+      - name: Bind dyups
+        run: |
+            # 注册 dyups ，会自动同步
             dyupsurl="${{ secrets.DYUPS_SERVER }}/api/${{ env.DYUPS_DOMAIN }}?r=$RANDOM"
-            httpcode=`curl -sL -w '%{http_code}' -H 'x-dyups-token: ${{ secrets.DYUPS_TOKEN }}' -X POST -d "[{\"address\":\"${{ secrets.SSH_HOST }}\",\"port\":$port}]" --connect-timeout 3 $dyupsurl -o /dev/null`
+            httpcode=`curl -sL -w '%{http_code}' -H 'x-dyups-token: ${{ secrets.DYUPS_TOKEN }}' -X POST -d '${{ steps.deploy.outputs.result }}' --connect-timeout 3 $dyupsurl -o /dev/null`
             if [ "$httpcode" != "200" ]; then
-              echo "注册 dyups 失败"
-              exit 1
-            fi
-
-            # 同步 dyups
-            dyupsurl="${{ secrets.DYUPS_SERVER }}/api/sync?r=$RANDOM"
-            httpcode=`curl -sL -w '%{http_code}' -H 'x-dyups-token: ${{ secrets.DYUPS_TOKEN }}' --connect-timeout 3 $dyupsurl -o /dev/null`
-            if [ "$httpcode" != "200" ]; then
-              echo "同步 dyups 失败"
+              echo "注册 dyups 失败，响应码：$httpcode"
               exit 1
             fi
   test:
     runs-on: ubuntu-latest
-    needs: dyups
-    if: ${{ needs.dyups.result == 'success' }}
+    needs: deploy
+    if: ${{ needs.deploy.result == 'success' }}
     steps:
       - name: Test
         run: |
           httpcode=`curl -sL -w '%{http_code}' --connect-timeout 3 https://${{ env.DYUPS_DOMAIN }} -o /dev/null`
           if [ "$httpcode" != "200" ]; then
-            echo "访问 dyups WLB 错误"
+            echo "访问 dyups WLB 错误，响应码：$httpcode"
             exit 1
           fi
