--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -9,6 +9,7 @@ env:
 
 jobs:
   build-and-push-image:
+    environment: test
     runs-on: ubuntu-latest
     outputs:
       version: ${{ steps.meta.outputs.version }}
@@ -19,7 +20,7 @@ jobs:
         uses: docker/login-action@v2
         with:
           registry: ${{ env.REGISTRY }}
-          username: ${{ github.actor }}
+          username: ${{ secrets.GHCR_ACCESS_USERNAME }}
           password: ${{ secrets.GHCR_ACCESS_TOKEN }}
       - name: Extract metadata (tags, labels) for Docker
         id: meta
