--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -1,7 +1,7 @@
 name: Publish pull request
 
 on:
-  pull_request:
+  pull_request_target:
 
 env:
   REGISTRY: ghcr.io
@@ -9,17 +9,33 @@ env:
 
 jobs:
   build-and-push-image:
+    environment: test
     runs-on: ubuntu-latest
     outputs:
       version: ${{ steps.meta.outputs.version }}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
+      - name: dump1
+        run: |
+          echo "${{ toJSON(github) }}"
+      - name: Checkout PR
+        uses: actions/checkout@v3
+        with:
+          ref: refs/pull/${{ github.event.number }}/merge
+          path: source
+      - name: Merge PR
+        run: |
+          ls -la .
+          ls -la source
+          rm -rf source/.github
+          cp .github source/
+          mv source/* .
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v2
         with:
           registry: ${{ env.REGISTRY }}
-          username: ${{ github.actor }}
+          username: ${{ secrets.GHCR_ACCESS_USERNAME }}
           password: ${{ secrets.GHCR_ACCESS_TOKEN }}
       - name: Extract metadata (tags, labels) for Docker
         id: meta
@@ -36,14 +52,18 @@ jobs:
         uses: docker/build-push-action@v3
         with:
           context: .
-          push: true
+          # push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
-  depoly:
-    needs: build-and-push-image
-    if: ${{ needs.build-and-push-image.result == 'success' }}
-    uses: ./.github/workflows/deploy.yml
-    secrets: inherit
-    with:
-      version: ${{ needs.build-and-push-image.outputs.version }}
-      domain: echo-${{ needs.build-and-push-image.outputs.version }}.dev.xuexb.com
+      - name: dump
+        run: |
+          echo ${{ steps.meta.outputs.labels }}
+          echo ${{ steps.meta.outputs.tags }}
+  # depoly:
+  #   needs: build-and-push-image
+  #   if: ${{ needs.build-and-push-image.result == 'success' }}
+  #   uses: ./.github/workflows/deploy.yml
+  #   secrets: inherit
+  #   with:
+  #     version: ${{ needs.build-and-push-image.outputs.version }}
+  #     domain: echo-${{ needs.build-and-push-image.outputs.version }}.dev.xuexb.com
