--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -8,17 +8,12 @@ env:
   IMAGE_NAME: ${{ github.repository }}
 
 jobs:
-  build-and-push-image:
+  deploy-pr:
     environment: test
     runs-on: ubuntu-latest
-    outputs:
-      version: ${{ steps.meta.outputs.version }}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
-      - name: dump1
-        run: |
-          echo "${{ toJSON(github) }}"
       - name: Checkout PR
         uses: actions/checkout@v3
         with:
@@ -28,12 +23,13 @@ jobs:
         run: |
           rm -rf source/.github
           cp -r source/* .
+          rm -rf source
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v2
         with:
           registry: ${{ env.REGISTRY }}
-          username: ${{ secrets.GHCR_ACCESS_USERNAME }}
-          password: ${{ secrets.GHCR_ACCESS_TOKEN }}
+          username: ${{ secrets.PERSONAL_ACCESS_NAME }}
+          password: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
       - name: Extract metadata (tags, labels) for Docker
         id: meta
         uses: docker/metadata-action@v2
@@ -50,19 +46,18 @@ jobs:
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
-  deploy:
-    needs: build-and-push-image
-    if: ${{ needs.build-and-push-image.result == 'success' }}
-    uses: ./.github/workflows/deploy.yml
-    secrets: inherit
-    with:
-      version: ${{ needs.build-and-push-image.outputs.version }}
-      domain: echo-${{ needs.build-and-push-image.outputs.version }}.dev.xuexb.com
-  comment:
-    runs-on: ubuntu-latest
-    needs: [build-and-push-image, deploy]
-    if: ${{ needs.deploy.result == 'success' }}
-    steps:
+      - name: deploy
+        uses: xuexb/dyups-actions/deploy@master
+        with:
+          ssh-host: ${{ secrets.SSH_HOST }}
+          ssh-username: ${{ secrets.SSH_USERNAME }}
+          ssh-key: ${{ secrets.SSH_KEY }}
+          ssh-port: ${{ secrets.SSH_PORT }}
+          image: ${{ secrets.GHCR_MIRROR }}/${{ env.IMAGE_NAME }}:${{ steps.meta.outputs.version }}
+          dyups-server: ${{ secrets.DYUPS_SERVER }}
+          dyups-token: ${{ secrets.DYUPS_TOKEN }}
+          domain: echo-${{ steps.meta.outputs.version }}.dev.xuexb.com
+          container-port: 8080
       - uses: actions/github-script@v6
         with:
           script: |
@@ -70,5 +65,5 @@ jobs:
               issue_number: context.issue.number,
               owner: context.repo.owner,
               repo: context.repo.repo,
-              body: `**Welcome**, The deployment is successful, please visit <https://echo-${{ needs.build-and-push-image.outputs.version }}.dev.xuexb.com> .✨`
+              body: `**Welcome**, The deployment is successful, please visit <https://echo-${{ steps.meta.outputs.version }}.dev.xuexb.com> .✨`
             })
