--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -8,10 +8,12 @@ on:
 env:
   REGISTRY: ghcr.io
   IMAGE_NAME: ${{ github.repository }}
+  DOMAIN: echo.xuexb.com
 
 jobs:
   build-and-push-image:
     runs-on: ubuntu-latest
+    environment: prd
     outputs:
       version: ${{ steps.meta.outputs.version }}
     steps:
@@ -21,8 +23,8 @@ jobs:
         uses: docker/login-action@v2
         with:
           registry: ${{ env.REGISTRY }}
-          username: ${{ github.actor }}
-          password: ${{ secrets.GHCR_ACCESS_TOKEN }}
+          username: ${{ secrets.PERSONAL_ACCESS_NAME }}
+          password: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
       - name: Extract metadata (tags, labels) for Docker
         id: meta
         uses: docker/metadata-action@v2
@@ -41,11 +43,15 @@ jobs:
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
-  depoly:
-    needs: build-and-push-image
-    if: ${{ needs.build-and-push-image.result == 'success' }}
-    uses: ./.github/workflows/deploy.yml
-    secrets: inherit
-    with:
-      version: ${{ needs.build-and-push-image.outputs.version }}
-      domain: echo.xuexb.com
+      - name: deploy
+        uses: xuexb/dyups-actions/deploy@master
+        with:
+          ssh-host: ${{ secrets.SSH_HOST }}
+          ssh-username: ${{ secrets.SSH_USERNAME }}
+          ssh-key: ${{ secrets.SSH_KEY }}
+          ssh-port: ${{ secrets.SSH_PORT }}
+          image: ${{ secrets.GHCR_MIRROR }}/${{ env.IMAGE_NAME }}:${{ steps.meta.outputs.version }}
+          dyups-server: ${{ secrets.DYUPS_SERVER }}
+          dyups-token: ${{ secrets.DYUPS_TOKEN }}
+          domain: ${{ env.DOMAIN }}
+          container-port: 8080
