chore: PR 时只删除 `.github/workflows` 文件夹

--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -21,7 +21,7 @@ jobs:
           path: source
       - name: Merge PR
         run: |
-          rm -rf source/.github
+          rm -rf source/.github/workflows
           cp -r source/* .
           rm -rf source
       - name: Login to GitHub Container Registry
