chore: 更新 Docker hub

--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -4,13 +4,16 @@ on:
   pull_request_target:
 
 env:
-  REGISTRY: ghcr.io
   IMAGE_NAME: ${{ github.repository }}
+  TAG: pr-${{ github.event.pull_request.number }}
+  DOMAIN: echo-pr-${{ github.event.pull_request.number }}.dev.xuexb.com
 
 jobs:
-  deploy-pr:
+  build-pr:
     environment: test
     runs-on: ubuntu-latest
+    outputs:
+      version: ${{ steps.meta.outputs.version }}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
@@ -27,18 +30,17 @@ jobs:
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v2
         with:
-          registry: ${{ env.REGISTRY }}
           username: ${{ secrets.PERSONAL_ACCESS_NAME }}
           password: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
       - name: Extract metadata (tags, labels) for Docker
         id: meta
         uses: docker/metadata-action@v2
         with:
-          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          images: ${{ env.IMAGE_NAME }}
           flavor: |
             latest=false
           tags: |
-            type=raw,value=pr-${{ github.event.pull_request.number }}
+            type=raw,value=${{ env.TAG }}
       - name: Build Docker image
         uses: docker/build-push-action@v3
         with:
@@ -46,6 +48,12 @@ jobs:
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
+  deploy-pr:
+    environment: test
+    runs-on: ubuntu-latest
+    needs: build-pr
+    if: ${{ needs.build-pr.result == 'success' }}
+    steps:
       - name: deploy
         uses: xuexb/dyups-actions/deploy@master
         with:
@@ -53,11 +61,17 @@ jobs:
           ssh-username: ${{ secrets.SSH_USERNAME }}
           ssh-key: ${{ secrets.SSH_KEY }}
           ssh-port: ${{ secrets.SSH_PORT }}
-          image: ${{ secrets.GHCR_MIRROR }}/${{ env.IMAGE_NAME }}:${{ steps.meta.outputs.version }}
+          image: ${{ env.IMAGE_NAME }}:${{ needs.build-pr.outputs.version }}
           dyups-server: ${{ secrets.DYUPS_SERVER }}
           dyups-token: ${{ secrets.DYUPS_TOKEN }}
-          domain: echo-${{ steps.meta.outputs.version }}.dev.xuexb.com
+          domain: ${{ env.DOMAIN }}
           container-port: 8080
+  comment-pr:
+    environment: test
+    runs-on: ubuntu-latest
+    needs: deploy-pr
+    if: ${{ needs.deploy-pr.result == 'success' }}
+    steps:
       - uses: actions/github-script@v6
         with:
           script: |
@@ -65,5 +79,5 @@ jobs:
               issue_number: context.issue.number,
               owner: context.repo.owner,
               repo: context.repo.repo,
-              body: `**Welcome**, The deployment is successful, please visit <https://echo-${{ steps.meta.outputs.version }}.dev.xuexb.com> .✨`
+              body: `**Welcome**, The deployment is successful, please visit <https://${{ env.DOMAIN }}> .✨`
             })
