--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -6,28 +6,28 @@ on:
       - master
 
 env:
-  REGISTRY: ghcr.io
   IMAGE_NAME: ${{ github.repository }}
   DOMAIN: echo.xuexb.com
 
 jobs:
-  deploy-prd:
-    runs-on: ubuntu-latest
+  build-prd:
     environment: prd
+    runs-on: ubuntu-latest
+    outputs:
+      version: ${{ steps.meta.outputs.version }}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v2
         with:
-          registry: ${{ env.REGISTRY }}
           username: ${{ secrets.PERSONAL_ACCESS_NAME }}
           password: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
       - name: Extract metadata (tags, labels) for Docker
         id: meta
         uses: docker/metadata-action@v2
         with:
-          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          images: ${{ env.IMAGE_NAME }}
           flavor: |
             latest=false
           tags: |
@@ -41,6 +41,12 @@ jobs:
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
+  deploy-prd:
+    environment: prd
+    runs-on: ubuntu-latest
+    needs: build-prd
+    if: ${{ needs.build-prd.result == 'success' }}
+    steps:
       - name: deploy
         uses: xuexb/dyups-actions/deploy@master
         with:
@@ -48,7 +54,7 @@ jobs:
           ssh-username: ${{ secrets.SSH_USERNAME }}
           ssh-key: ${{ secrets.SSH_KEY }}
           ssh-port: ${{ secrets.SSH_PORT }}
-          image: ${{ secrets.GHCR_MIRROR }}/${{ env.IMAGE_NAME }}:${{ steps.meta.outputs.version }}
+          image: ${{ env.IMAGE_NAME }}:${{ needs.build-prd.outputs.version }}
           dyups-server: ${{ secrets.DYUPS_SERVER }}
           dyups-token: ${{ secrets.DYUPS_TOKEN }}
           domain: ${{ env.DOMAIN }}
