--- a/nginx.conf
+++ b/nginx.conf
@@ -14,7 +14,7 @@ server {
 <html lang="zh-CN" mip>
 <head>
     <meta charset="UTF-8">
-    <title>输出nginx全局变量</title>
+    <title>输出nginx全局变量 ceshi</title>
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
     <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
     <link rel="stylesheet" href="https://mipcache.bdstatic.com/static/v1/mip.css">
